Removed setup attr

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="node_modules/video.js/dist/ie8/videojs-ie8.min.js"></script>
     </head>
     <body>
-        <video id="my-video" class="video-js" autoplay controls preload="auto" width="640" height="360" data-setup="{}">
+        <video id="my-video" class="video-js" autoplay controls preload="auto" width="640" height="360">
             <source src="https://demo.unified-streaming.com/video/tears-of-steel/tears-of-steel.ism/.mpd" type="application/dash+xml">
             <p class="vjs-no-js">
                 To view this video please enable JavaScript, and consider upgrading to a web browser that
