--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                     </p>
                 </video>
             </div>
+            <br>
+            <a href="https://github.com/halibegic/videojs-shaka">GitHub</a>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/5.13.0/video.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/2.0.0/shaka-player.compiled.js"></script>
