Updated licence URL

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <source src="https://demo.unified-streaming.com/video/tears-of-steel/tears-of-steel-dash-widevine.ism/.mpd" type="application/dash+xml">
                     <p class="vjs-no-js">
                         To view this video please enable JavaScript, and consider upgrading to a web browser that
-                        <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+                        <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
                     </p>
                 </video>
             </div>
@@ -37,7 +37,7 @@
                 shaka: {
                     drm: {
                         servers: {
-                            'com.widevine.alpha': 'http://widevine-proxy.appspot.com/proxy'
+                            'com.widevine.alpha': 'https://widevine-proxy.appspot.com/proxy'
                         }
                     }
                 }
